# simim_public

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py  setupsimim.py
docs/: api.rst  api_galprops.rst  api_instrument.rst  api_lightcone.rst  api_map.rst  api_siminterface.rst  api_todo.rst  conf.py  first_look_workbook.rst  index.rst  installation.rst  plans.rst  requirements.txt
docs/notebooks/: first_look.ipynb  getting_data.ipynb  interacting_with_sims.ipynb  making_lightcones.ipynb  to_do_instrument_demo.ipynb  to_do_power_spectrum_demo.ipynb
simim/: __init__.py  _handlers.py  _paths.py  _pltsetup.py  constants.py
simim/galprops/: __init__.py  co.py  densegas.py  dev_am.py  dev_sfr_sides.py  galprops.py  galprops_am.py  galprops_builtin.py  line_co.py  line_fir.py  line_fir_yang.py  log10normal.py  sfr_behroozi13.py  sfr_bethermin17.py  sfr_ir.py
simim/instrument/: __init__.py  _helpers.py  helpers.py  init.py  instrument.py  noise.py  noise_functions.py  old_obs_noise.py  spatial_response.py  spectral_response.py
simim/lightcone/: __init__.py  lchandler.py  lcmaker.py
simim/map/: __init__.py  dev_features.py  gridder.py  init.py
simim/siminterface/: __init__.py  _illustris_datahandling.py  _rawsiminterface.py  _sims.py  _testing.py  illustris.py  illustris_datahandling.py  simhandler.py  slick.py  (+2 more)
simim_dev/: old_obs_radio.py
tests/: make_testbox_resource.py  test_gridder.py  test_imports.py  test_instrument.py  test_lcmaker.py  test_rawsiminterface.py  test_rawsiminterface2.py  test_siminterface.py  test_spec_gridder.py
(+5 files in other folders)
