[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simim"
authors = [{name = "R P Keenan"}]
description = "Code for simulating the radio, sub-mm and FIR sky"
readme = "README.md"
license = {file = "LICENSE"}
version = "0.1.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy"
]
keywords = [
    "astronomy", "line intensity mapping", "LIM", "extragalactic", 
    "galaxy evolution", "light cone",
    "radio astronomy", "millimeter astronomy", "submillimeter astronomy", "FIR astronomy"
]
requires-python = ">=3.6"
dependencies = [
    "astropy",
    "h5py",
    "importlib_resources",
    "matplotlib",
    "numpy",
    "requests",
    "scipy",
]

[project.scripts]
setupsimim = "simim:setupsimim"

[project.urls]
Documentation = "https://simim.readthedocs.io"
Repository = "https://github.com/rpkeenan/simim_public"